--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,3 +6,8 @@ build-backend = "setuptools.build_meta"
 name = "edpop-explorer"
 version = "0.0.1"
 dependencies = []
+
+[tool.pytest.ini_options]
+pythonpath = [
+  "edpop_explorer"
+]
