--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "edpop-explorer"
 version = "0.0.1"
-dependencies = []
+dependencies = [
+  "sruthi"
+]
 
 [tool.pytest.ini_options]
 pythonpath = [
