--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,10 @@ build-backend = "setuptools.build_meta"
 name = "edpop-explorer"
 version = "0.0.1"
 dependencies = [
-  "sruthi"
+  "sruthi",
+  "termcolor",
+  "appdirs",
+  "SPARQLWrapper"
 ]
 
 [tool.pytest.ini_options]
