--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "edpop-explorer"
 version = "0.1.0"
 dependencies = [
-  "sruthi",
+  "sruthi@git+https://github.com/UUDigitalHumanitieslab/sruthi@feature/additional-params",
   "termcolor",
   "appdirs",
   "SPARQLWrapper",
