Basic RDF creation for readers with HPB as example

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ dependencies = [
   'pandas',
   'cmd2',
   'pyyaml',
+  'rdflib',
+  'Pygments',
 ]
 description = "Common interface to multiple library catalogues and bibliographical databases"
 readme = "README.md"
