--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,6 +34,7 @@ jobs:
           pip install ".[dev]"
       - name: Lint with ruff
         run: |
+          pip install ruff
           ruff --format=github --target-version=py37 .
       - name: Test with pytest
         run: |
