--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ authors = [
   {name="Utrecht University, Centre for Digital Humanities - Research Software Lab", email="cdh@uu.nl"}
 ]
 dependencies = [
-  "sruthi>=2.0.0",
+  "sruthi>=2.0.0,<3",
   "termcolor",
   "appdirs",
   "SPARQLWrapper",
@@ -18,13 +18,13 @@ dependencies = [
   'pandas',
   'cmd2',
   'pyyaml',
-  'rdflib',
+  'rdflib>=7.0.0,<8',
   'Pygments',
 ]
 
 description = "Common interface to multiple library catalogues and bibliographical databases"
 readme = "README.md"
-requires-python = ">=3.7"
+requires-python = ">=3.8"
 classifiers = [
   'Development Status :: 2 - Pre-Alpha',
   'Environment :: Console',
