--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
   'pyyaml',
   'rdflib>=7.0.0,<8',
   'Pygments',
+  'xmltodict>=0.13.0',
 ]
 
 description = "Common interface to multiple library catalogues and bibliographical databases"
