Add LanguageField with normalizer

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
   'Pygments',
   'xmltodict>=0.13.0',
   'typing_extensions',
+  'iso639-lang',
 ]
 
 description = "Common interface to multiple library catalogues and bibliographical databases"
